KC-1740: Added get folders count API: - added new route for get folders count - updated swagger with new API - added new constant
